// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth2fa Routes auth2fa-enable should conform the route with auth, validation, respond correctly and call next on error 1`] = `
Object {
  "properties": Object {
    "body": Object {
      "properties": Object {
        "token": Object {
          "type": "string",
        },
      },
      "required": Array [
        "token",
      ],
      "type": "object",
    },
  },
  "required": Array [
    "body",
  ],
  "type": "object",
}
`;

exports[`Auth2fa Routes auth2fa-enable should conform the route with auth, validation, respond correctly and call next on error 2`] = `
Object {
  "success": true,
}
`;

exports[`Auth2fa Routes auth2fa-reset should conform the route with auth, validation, respond correctly and call next on error 1`] = `
Object {
  "properties": Object {
    "body": Object {
      "properties": Object {
        "_id": Object {
          "pattern": "^[0-9a-fA-F]{24}$",
          "type": "string",
        },
      },
      "required": Array [
        "_id",
      ],
      "type": "object",
    },
  },
  "required": Array [
    "body",
  ],
  "type": "object",
}
`;

exports[`Auth2fa Routes auth2fa-reset should conform the route with auth, validation, respond correctly and call next on error 2`] = `
Object {
  "success": true,
}
`;

exports[`Auth2fa Routes auth2fa-secret should conform the route with auth, validation, respond correctly and call next on error 1`] = `
Object {
  "type": "object",
}
`;

exports[`Auth2fa Routes auth2fa-secret should conform the route with auth, validation, respond correctly and call next on error 2`] = `
Object {
  "otpauth": "otpauthURL",
  "secret": "secretKey",
}
`;
